# qtiConverter

./: .gitignore  README-BBEditPreviewTemp.md.html  README.html  README.md  build_debug.py  build_macos_dir.py  debug_main.py  exampleTest.txt  htmltestoutput.html  htmltestoutput.txt  imagePolygon.py  main.py  pyproject.toml  qtiConverterApp.py  qti_gui.py  qticonverter.py  run_direct_gui.py  setup.py  testXML.xml  xmlTest.py
.eggs/py2app-0.18-py3.6.egg/EGG-INFO/: RECORD
.eggs/py2app-0.18-py3.7.egg/EGG-INFO/: PKG-INFO
.github/workflows/: build.yml
docs/: FAQ.md  formatting.md  importing.md  installation.md  report_feature.md  samples.md
qtiConverterApp.app/Contents/: Info.plist
qtiConverterApp.app/Contents/Frameworks/: libc++.1.0.dylib  libc++abi.1.0.dylib  libffi.6.dylib  libjpeg.9.dylib  libpython3.5.dylib  libpython3.6.dylib  libpython3.6m.dylib  libssl.1.0.0.dylib  libtiff.5.dylib  libtk8.5.dylib  libyaml-0.2.dylib  (+1 more)
quiz-export-mulitiple-question-types/i96e822e31f75ab7b85b25901c6d68ef8/: assessment_meta.xml
simpleTestForImport/: bank1.txt
simpleTestForImport/bank1_export/: imsmanifest.xml
testFiles/: regex_passthrough_test.txt  regex_passthrough_test_report.txt  regex_test_report.txt
testFiles/quiz-export-mulitiple-question-types/: imsmanifest.xml
testFiles/simple Test For Import/: MBsample.txt  MBsample_report.txt  bank1.txt  bank1_preview.html  bank1_report.txt  bank2.txt  bank2_preview.html  mbtes_report.txt  mbtest.md  testformula.txt  testformula_preview.html
testFiles/simpleTestForImport/: bank1.txt
windows_build/: setup.py
(+9 files in other folders)
